
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.heatherlogan.songle.GameActivity"
    android:background="@color/lightGreen"
    android:paddingTop="50dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/teal"
        android:textSize="100sp"
        android:gravity="center"
        android:textStyle="bold"
        android:id="@+id/textView"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="173dp"
        android:layout_margin="10dp"
        android:paddingTop="70dp">

        <Button
            android:id="@+id/newGameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal"
            android:layout_weight="0.25"
            android:text="@string/newgame"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@color/lightGreen"
            android:layout_margin="10dp"
            />

        <Button
            android:id="@+id/resumeGameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@color/teal"
            android:text="@string/resume_game"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@color/lightGreen"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/scoreboardButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@color/teal"
            android:text="@string/scoreboard"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:onClick="openScoreboard"
            android:textColor="@color/lightGreen"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/optionsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/options"
            android:background="@color/teal"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:onClick="openOptions"
            android:textColor="@color/lightGreen"
            android:layout_margin="10dp"/>

    </LinearLayout>


</RelativeLayout>
